nginx/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: pi-dashboard
spec:
  selector:
    matchLabels:
      pod-label: nginx-pi-dashboard-pod
  replicas: 2 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        pod-label: nginx-pi-dashboard-pod
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-dashboard
  namespace: pi-dashboard
spec:
  selector:
    pod-label: nginx-pi-dashboard-pod
  ports:
  - protocol: TCP
    port: 80
